--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//com/chanjet/MianWeather/GoodWather.py=utf-8
 encoding//com/chanjet/MianWeather/GrabWeatherData.py=utf-8
