Signed-off-by: JefferShell <1876993774@qq.com>

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//com/chanjet/MianWeather/GoodWather.py=utf-8
 encoding//com/chanjet/MianWeather/GrabWeatherData.py=utf-8
+encoding//com/chanjet/MianWeather/GrabWeatherData1.py=utf-8
